--- a/themes/night.css
+++ b/themes/night.css
@@ -1965,12 +1965,6 @@ body.flat.ttrss_main.ttrss_prefs td.filename,
 body.flat.ttrss_main.ttrss_prefs div.prefHelp {
   color: #999999;
 }
-body.flat.ttrss_main.ttrss_prefs #filterNewRuleDlg .dijitValidationTextAreaError {
-  background: #503030;
-}
-body.flat.ttrss_main.ttrss_prefs #filterNewRuleDlg .dijitValidationTextArea:not(.dijitValidationTextAreaError) {
-  background: #305030;
-}
 body.flat.ttrss_main.ttrss_prefs hr {
   border-color: #666;
 }
@@ -2209,5 +2203,11 @@ body.flat.ttrss_main .alert.alert-info {
 body.flat.ttrss_main .alert.alert-danger {
   color: #b94a48;
   border-color: #702c2b;
+}
+body.flat.ttrss_main #filterNewRuleDlg .dijitValidationTextAreaError {
+  background: #503030;
+}
+body.flat.ttrss_main #filterNewRuleDlg .dijitValidationTextArea:not(.dijitValidationTextAreaError) {
+  background: #305030;
 }
 /*# sourceMappingURL=night.css.map */
